Added working gemini requests